--- a/ui_lovelace_minimalist/custom_cards/custom_card_lock_gimdow/custom_card_lock_gimdow.yaml
+++ b/ui_lovelace_minimalist/custom_cards/custom_card_lock_gimdow/custom_card_lock_gimdow.yaml
@@ -96,12 +96,12 @@ custom_card_lock_gimdow:
               }
             ]]]
   custom_fields:
-    # notification_locked_and_opened: >
-    #   [[[
-    #       if (variables.ulm_custom_card_lock_door_open !== undefined && (entity.state === "locked" && states[variables.ulm_custom_card_lock_door_open].state === "on")) {
-    #         return `<span title="${variables.ulm_custom_card_lock_locked_and_opened}"><ha-icon icon="mdi:door-open" style="width: 12px; height: 12px; color: var(--primary-background-color);"></ha-icon></span>`;
-    #       }
-    #   ]]]
+    notification_locked_and_opened: >
+      [[[
+          if (variables.ulm_custom_card_lock_door_open !== undefined && (entity.state === "locked" && states[variables.ulm_custom_card_lock_door_open].state === "on")) {
+            return `<span title="${variables.ulm_custom_card_lock_locked_and_opened}"><ha-icon icon="mdi:door-open" style="width: 12px; height: 12px; color: var(--primary-background-color);"></ha-icon></span>`;
+          }
+      ]]]
     notification_battery: >
       [[[
           if (entity.attributes.battery_state == "low") {
