--- a/ui_lovelace_minimalist/dashboard/views/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home.yaml
@@ -55,28 +55,13 @@ cards:
               ulm_card_person_entity: person.julie
               ulm_card_person_use_entity_picture: true
               ulm_card_person_icon: mdi:face-woman
-      # card_title rooms #
+      # card_title devices #
       - type: "custom:button-card"
         template: card_title
-        name: Rooms
-      # card_esh_room bathrom & lock #
+        name: Devices
+      # devices lock water_heater #
       - type: horizontal-stack
         cards:
-          - type: "custom:button-card"
-            template:
-              - card_esh_room
-              - yellow_on
-            name: Bathroom
-            icon: mdi:bathtub
-            tap_action:
-              action: navigate
-              navigation_path: "bathroom"
-            variables:
-              ulm_custom_card_esh_room_light_entity: switch.water_heater
-              ulm_card_esh_room_light_icon_on: mdi:power
-              ulm_card_esh_room_light_icon_off: mdi:power
-              ulm_card_dynamic_color: true
-            label: '[[[ return "🌡️ labelToAdd" ]]]' ##'[[[ return states["sensor.room_temperature"].state + "°C" ]]]'
           - type: "custom:button-card"
             entity: lock.smart_lock
             template: "custom_card_lock_gimdow"
@@ -85,9 +70,21 @@ cards:
               custom_card_lock_gimdow_language_variables: en
               ulm_custom_card_lock_tap_control: true
               ulm_custom_card_lock_battery_level: lock.smart_lock
+              ulm_custom_card_lock_door_open: !secret sensor_main_door
             triggers_update:
-              - "sensor.door_battery"
-              - "binary_sensor.door_open"
+              - entity.attributes.battery_state
+              - !secret sensor_main_door
+          - type: 'custom:button-card'
+            template: card_power_outlet
+            entity: switch.water_heater
+            variables:
+              ulm_card_power_outlet_name: Water Heater
+              ulm_card_power_outlet_icon: mdi:power
+              ulm_card_power_outlet_force_background_color: true
+      # card_title rooms #
+      - type: "custom:button-card"
+        template: card_title
+        name: Rooms
         # card_esh_room living room #
       - type: horizontal-stack
         cards:
@@ -106,7 +103,7 @@ cards:
               ulm_custom_card_esh_room_climate_entity: climate.ac_livingroom
               ulm_card_dynamic_color: true
               ulm_custom_card_items_count: group.rollers_livingroom
-            label: "labelToAdd"
+            label: "🌡️ labelToAdd"
       # card_esh_room laly & guest #
       - type: horizontal-stack
         cards:
