dev | card_esh_room_dev finalized including margin-top

--- a/scripts.yaml
+++ b/scripts.yaml
@@ -14,3 +14,19 @@ find_my_phone:
                   channel: alarm_stream
             - delay:
                 seconds: 6
+find_my_nord9t:
+    alias: Find My Phone
+    sequence:
+      - repeat:
+          count: 5
+          sequence:
+            - service: notify.mobile_app_cph2399
+              data:
+                title: Find my phone
+                message: Home Assistant is searching your phone!
+                data:
+                  ttl: 0
+                  priority: high
+                  channel: alarm_stream
+            - delay:
+                seconds: 6
