--- a/ui_lovelace_minimalist/dashboard/ui-lovelace.yaml
+++ b/ui_lovelace_minimalist/dashboard/ui-lovelace.yaml
@@ -7,6 +7,7 @@ show_in_sidebar: false
 views:
   - !include views/home.yaml
   - !include views/person/daddy.yaml
+  - !include views/person/mommy.yaml
   - !include views/room/bedroom-01.yaml
   - !include views/room/bedroom-03.yaml
   - !include views/room/bedroom-04.yaml
