--- a/ui_lovelace_minimalist/dashboard/views/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home.yaml
@@ -51,19 +51,16 @@ cards:
               # ulm_card_person_zone1: zone.work
           - type: "custom:button-card"
             template: card_person
-            tap_action:
-              action: navigate
-              navigation_path: mommy
             variables:
               ulm_card_person_entity: person.julie
               ulm_card_person_use_entity_picture: true
               ulm_card_person_icon: mdi:face-woman
-              ulm_card_person_battery: sensor.cph2399_battery_level
+              lm_card_person_battery: sensor.cph2399_battery_level
       # card_title devices #
       - type: "custom:button-card"
         template: card_title
         name: Devices
-      # devices lock water_heater #
+      # devices lock & water_heater #
       - type: horizontal-stack
         cards:
           - type: "custom:button-card"
@@ -94,7 +91,7 @@ cards:
         cards:
           - type: "custom:button-card"
             template:
-              - card_esh_room
+              - card_esh_room_dev
               - yellow_on
             name: Living Room
             icon: mdi:sofa
@@ -102,18 +99,16 @@ cards:
               action: navigate
               navigation_path: livingroom
             variables:
-              ulm_custom_card_esh_room_light_entity: !secret roller_livingroom
-              ulm_custom_card_esh_room_light_entity_tap_action: none
+              ulm_custom_card_esh_room_light_entity: !secret light_trees
               ulm_custom_card_esh_room_climate_entity: climate.ac_livingroom
-              ulm_card_dynamic_color: true
-              ulm_custom_card_items_count: group.rollers_livingroom
+              ulm_custom_card_esh_room_cover_entity: group.rollers_livingroom
             label: "🌡️ labelToAdd"
       # card_esh_room laly & guest #
       - type: horizontal-stack
         cards:
           - type: "custom:button-card"
             template:
-              - card_esh_room
+              - card_esh_room_dev
               - yellow_on
             name: Bedroom
             icon: mdi:bed
@@ -121,13 +116,12 @@ cards:
               action: navigate
               navigation_path: bedroom-03
             variables:
-              ulm_custom_card_esh_room_light_entity: !secret roller_bedroom_03
-              ulm_custom_card_esh_room_light_entity_tap_action: none
+              ulm_custom_card_esh_room_cover_entity: !secret roller_bedroom_03
               ulm_custom_card_esh_room_climate_entity: climate.ac_bedroom_02
             label: "Laly"
           - type: "custom:button-card"
             template:
-              - card_esh_room
+              - card_esh_room_dev
               - yellow_on
             name: Bedroom
             icon: mdi:bed
@@ -135,8 +129,7 @@ cards:
               action: navigate
               navigation_path: bedroom-04
             variables:
-              ulm_custom_card_esh_room_light_entity: !secret roller_bedroom_04
-              ulm_custom_card_esh_room_light_entity_tap_action: none
+              ulm_custom_card_esh_room_cover_entity: !secret roller_bedroom_04
               ulm_custom_card_esh_room_climate_entity: climate.ac_guest
             label: "Guest"
       # card_esh_room bedroom main & office #
@@ -144,7 +137,7 @@ cards:
         cards:
           - type: "custom:button-card"
             template:
-              - card_esh_room
+              - card_esh_room_dev
               - yellow_on
             name: Bedroom
             icon: mdi:bed
@@ -152,13 +145,12 @@ cards:
               action: navigate
               navigation_path: bedroom-01
             variables:
-              ulm_custom_card_esh_room_light_entity: !secret roller_bedroom_01
-              ulm_custom_card_esh_room_light_entity_tap_action: none
+              ulm_custom_card_esh_room_cover_entity: !secret roller_bedroom_01
               ulm_custom_card_esh_room_climate_entity: climate.ac_bedroom_main
             label: Main
           - type: "custom:button-card"
             template:
-              - card_esh_room
+              - card_esh_room_dev
               - yellow_on
             name: Office
             icon: mdi:desktop-classic
@@ -167,20 +159,9 @@ cards:
               action: navigate
               navigation_path: bedroom-05
             variables:
-              ulm_custom_card_esh_room_light_entity: !secret roller_bedroom_05
-              ulm_custom_card_esh_room_light_entity_tap_action: none
               ulm_custom_card_esh_room_climate_entity: climate.ac_office
-            label: '[[[
-              var position;
-              var cover_position = entity.attributes.current_position;
-              if (cover_position == 0) {
-              var position = "closed";
-              }
-              else if (cover_position == 100) {
-              var position = "open";
-              }
-              else {
-              var position = cover_position + "%"
-              }
-              return "window " + position;
-              ]]]'
+              ulm_custom_card_esh_room_cover_entity: !secret roller_bedroom_05
+            label: "YK"
+
+
+
