--- a/ui_lovelace_minimalist/dashboard/views/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home.yaml
@@ -42,20 +42,23 @@ cards:
             template: card_person
             tap_action:
               action: navigate
-              navigation_path: daddy
+              navigation_path: dad
             variables:
-              ulm_card_person_entity: person.yakov
+              ulm_card_person_entity: !secret dad_phone
               ulm_card_person_use_entity_picture: true
               ulm_card_person_icon: mdi:face-man
-              ulm_card_person_battery: sensor.gm1903_battery_level
+              ulm_card_person_battery: !secret dad_phone_battery_level
               # ulm_card_person_zone1: zone.work
           - type: "custom:button-card"
             template: card_person
+            tap_action:
+              action: navigate
+              navigation_path: mom
             variables:
-              ulm_card_person_entity: person.julie
+              ulm_card_person_entity: !secret mom_phone
               ulm_card_person_use_entity_picture: true
               ulm_card_person_icon: mdi:face-woman
-              lm_card_person_battery: sensor.cph2399_battery_level
+              ulm_card_person_battery: !secret mom_phone_battery_level
       # card_title devices #
       - type: "custom:button-card"
         template: card_title
