--- a/ui_lovelace_minimalist/dashboard/views/person/mom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/person/mom.yaml
@@ -1,5 +1,5 @@
-title: July
-path: mommy
+title: !secret mom_name
+path: mom
 cards:
 - type: vertical-stack
   cards:
@@ -9,18 +9,18 @@ cards:
       ulm_chip_back_path: home
   - type: custom:button-card
     template: card_title
-    name: July
+    name: !secret mom_name
         
   - type: horizontal-stack
     cards:
       - type: custom:button-card
         template: card_battery
-        entity: sensor.cph2399_battery_level
+        entity: !secret mom_phone_battery_level
         variables:
-          ulm_card_battery_battery_state_entity_id: sensor.cph2399_battery_state
+          ulm_card_battery_battery_state_entity_id: !secret mom_phone_battery_state
           ulm_card_battery_battery_level_danger: 20
           ulm_card_battery_battery_level_warning: 50
-          ulm_card_battery_name: Nord 9T
+          ulm_card_battery_name: !secret mom_phone_name
       - type: custom:button-card
         template: card_script
         variables:
@@ -37,7 +37,7 @@ cards:
             - background-color: "rgba(var(--color-yellow), 0.2)"
         tap_action:
           action: call-service
-          service: script.find_my_nord9t
+          service: script.find_my_phone_mom
               
 
 
