--- a/ui_lovelace_minimalist/dashboard/views_dev/room/livingroom.yaml
+++ b/ui_lovelace_minimalist/dashboard/views_dev/room/livingroom.yaml
@@ -51,22 +51,18 @@ cards:
         cards:
         - type: "custom:button-card"
           template: card_light
-          entity: !secret light_trees
+          entity: !secret garden_light_trees
           variables:
             ulm_card_light_name: Garden Lights
             ulm_card_light_enable_color: true
             ulm_card_light_force_background_color: true
         
-      - type: "custom:button-card"
-        template: card_media_player
-        entity: !secret tv_livingroom
-        tap_action:
-          action: navigate
-          navigation_path: bedroom-05
-        variables:
-          ulm_card_media_player_name : TV
-          # ulm_card_media_player_enable_popup: true
-          ulm_card_media_player_enable_controls: true
-          ulm_card_media_player_enable_volume_buttons: true
-          ulm_card_media_player_power_button: true
-          ulm_card_media_player_collapsible: true
+        - type: "custom:button-card"
+          template: card_media_player
+          entity: !secret tv_livingroom
+          variables:
+            ulm_card_media_player_name : TV
+            ulm_card_media_player_enable_volume_buttons: true
+            ulm_card_media_player_power_button: true
+            ulm_card_media_player_collapsible: true
+            ulm_card_media_player_color: yellow
