--- a/ui_lovelace_minimalist/dashboard/views/home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/home.yaml
@@ -102,7 +102,7 @@ cards:
               action: navigate
               navigation_path: livingroom
             variables:
-              ulm_custom_card_esh_room_light_entity: !secret light_trees
+              ulm_custom_card_esh_room_light_entity: !secret garden_light_trees
               ulm_custom_card_esh_room_climate_entity: climate.ac_livingroom
               ulm_custom_card_esh_room_cover_entity: group.rollers_livingroom
             label: "🌡️ labelToAdd"
