--- a/ui_lovelace_minimalist/custom_cards/custom_card_esh_room_dev/custom_card_esh_room_dev.yaml
+++ b/ui_lovelace_minimalist/custom_cards/custom_card_esh_room_dev/custom_card_esh_room_dev.yaml
@@ -403,5 +403,15 @@ card_esh_room_dev:
               img_cell:
                 - background-color: >-
                     [[[ return 'rgba(var(--color-yellow), 0.2)'; ]]]
+          - value: "on"
+            icon: "[[[ return variables.ulm_card_esh_room_cover_icon_open; ]]]"
+            styles:
+              icon:
+                - color: "rgba(var(--color-yellow), 1)"
+              img_cell:
+                - background-color: >-
+                    [[[ return 'rgba(var(--color-yellow), 0.2)'; ]]]
           - value: "closed"
+            icon: "[[[ return variables.ulm_card_esh_room_cover_icon; ]]]"
+          - value: "off"
             icon: "[[[ return variables.ulm_card_esh_room_cover_icon; ]]]"
