--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,6 +1,13 @@
 # Loads default set of integrations. Do not remove.
 default_config:
 
+http:
+  ip_ban_enabled: true
+  login_attempts_threshold: 5
+  use_x_forwarded_for: true
+  trusted_proxies:
+    - 172.30.33.0/24
+
 lovelace:
   dashboards:
     db-dev:
